ie页面隐藏全选按钮

--- a/AYumeRNA-frontend/src/pages/TRNAEvaluator/IdentityElementsEvaluation/TableWithAction.module.css
+++ b/AYumeRNA-frontend/src/pages/TRNAEvaluator/IdentityElementsEvaluation/TableWithAction.module.css
@@ -104,3 +104,20 @@
 .modalButton:hover {
   background-color: #66b1ff;
 }
+
+
+.collapse-button {
+  background-color: #409eff;
+  color: #ffffff;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 6px;
+  cursor: pointer;
+  font-size: 14px;
+  transition: background-color 0.3s ease;
+  margin-bottom: 10px;
+}
+
+.collapse-button:hover {
+  background-color: #66b1ff;
+}
