修改按钮为红色

--- a/AYumeRNA-frontend/src/pages/TRNAEvaluator/IdentityElementsEvaluation/TableWithAction.module.css
+++ b/AYumeRNA-frontend/src/pages/TRNAEvaluator/IdentityElementsEvaluation/TableWithAction.module.css
@@ -121,3 +121,8 @@
 .collapse-button:hover {
   background-color: #66b1ff;
 }
+
+.red-button {
+  background-color: red !important;
+  border-color: red !important;
+}
